# RolePlayer

./: .gitignore  CMakeLists.txt  README.md  readme.md
protos/: HelloThere.proto
resources/: Script.txt
src/client/: main.cpp
src/demo/: main.cpp
src/demo/process/: IProcess.hpp
src/demo/process/win/: Process.cpp  Process.hpp
src/server/: ScriptLine.hpp  ServiceImpl.cpp  ServiceImpl.hpp  main.cpp  script_reader.cpp  script_reader.hpp
src/utils/: system.hpp
src/utils/win/: system.cpp
